# planets-rs

./: Cargo.toml  LICENSE  README.md
src/: body.rs  choice.rs  config.rs  control.rs  default.frag  default.vert  lighting.rs  main.rs  material.rs  render.rs  simulate.rs  simulation.rs  state.rs  status.rs  system.rs  ui.rs
src/render/: body_hint.rs  body_material.frag  body_material.rs  camera.rs  camera_mover.rs  flat_material.rs  fps.rs  grid.rs  interpolate.rs  lighting.rs  lines_material.rs  material.frag  material.rs  shadow_material.frag  shadow_material.rs  shadow_material.vert  skybox.rs  trail.rs  ui.rs
src/render/testdata/: interpolate
src/simulation/: seconds.rs  snapshot.rs
