[package]
name = "planets-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kiss3d = "0.30"
kiss3d = { git = "https://github.com/sebcrozet/kiss3d.git", rev = "c8c34df" }
# kiss3d = { path = "../kiss3d" }
rand = "0.8.5"
chrono = "0.4"
enum-iterator = "1.1.3"