[package]
name = "planets-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# kiss3d = "0.30"
kiss3d = { git = "https://github.com/sebcrozet/kiss3d.git", rev = "c8c34df", features = ["conrod"] }
# kiss3d = { path = "../kiss3d" }
rand = "0.8.5"
chrono = "0.4"
#enum-iterator = "1.1.3"
#enum-map = "2.4.0"
lazy_static = "1.4.0"
#delegate = "0.7.0"
datadriven = "0.6.0"

#[profile.dev.package.kiss3d]
#opt-level = 3
#debug-assertions = false
#overflow-checks = false

[profile.dev.package.image]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.dev.package.jpeg-decoder]
opt-level = 3
debug-assertions = false
overflow-checks = false

[profile.dev.package.png]
opt-level = 3
debug-assertions = false
overflow-checks = false